--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "itgg",
+  "name": "ITGG",
+  "description": "InfoTech GateGame",
   "version": "1.0.0",
   "private": true,
   "scripts": {
