--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,12 +41,12 @@ jobs:
 
       - name: Run linter 👀
         run: npm run lint
-    
-      - name: Build 
+
+      - name: Build
         run: npm run generate
-        # env:
-        #   BASE_URL: 
-        #   API_URI: 
+        env:
+          API_URI: ${{ secrets.API_URI }}
+        #   BASE_URL:
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
